# line-follower-simulator

./: ITEMS.md  TODO.md  expanded.txt
bevy-experiment/: Cargo.toml
bevy-experiment/src/: main.rs
bevy-experiment/src/bot/: mod.rs
bevy-experiment/src/motors/: mod.rs
bevy-experiment/src/track/: mod.rs
bevy-experiment/src/ui/: mod.rs
bevy-experiment/src/utils/: mod.rs
bot/: Cargo.toml
bot/src/: async_api.rs  async_event_loop.rs  bindings.rs  blocking_api.rs  lib.rs  line_follower_robot.rs  value_ext.rs
bot/src/examples/: basic_pid.rs  pid_with_memory.rs  telemetry_test.rs
bot/src/examples/nb/: mod.rs  parallel_tasks.rs  pid_with_memory.rs  tasks_with_channels.rs
execution-data/src/: lib.rs
executor-playground/src/: main.rs
physical-simulator/: Cargo.toml
physical-simulator/src/: lib.rs
sample-robot-code/src/: lib.rs
sim/: Cargo.toml
sim/bevy_panorbit_camera/: .cargo_vcs_info.json  Cargo.toml  README.md
sim/execution-data/: Cargo.toml
sim/sim/: Cargo.toml
sim/sim/src/: app_builder.rs  data.rs  main.rs  runner.rs  server.rs  track.rs  track_selection.rs  ui.rs  ui_runner.rs  ui_test.rs  visualizer.rs
sim/sim/src/app_builder/: mod.rs
sim/sim/src/bot/: mod.rs  model.rs  motors.rs  vis.rs
sim/sim/src/bot/model/: mod.rs
sim/sim/src/bot/sensors/: imu.rs  line_sensors.rs
sim/sim/src/data/: mod.rs
sim/sim/src/motors/: mod.rs
sim/sim/src/runner/: mod.rs
sim/sim/src/sensors/: mod.rs
sim/sim/src/track/: mod.rs
sim/sim/src/ui/: mod.rs
sim/sim/src/utils/: mod.rs
visualizer-playground/: Cargo.toml
wit/: world.wit
(+16 files in other folders)
