[package]
name = "bevy-car"
version = "0.1.0"
edition = "2024"

[workspace]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = { version = "0.3.1", features = ["diagnostic_ui", "bevy_diagnostic"] }
bevy = { version = "0.16.1", features = ["dynamic_linking", "bevy_picking"] }
bevy_editor_cam = "0.6.0"

log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
