[package]
name = "line-follower-robot"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
wit-bindgen = { version = "0.46.0", features = ["bitflags"] }
futures-micro = "0.5.0"
pin-project-lite = "0.2.4"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:line-follower-robot"

[package.metadata.component.dependencies]
