[package]
name = "sim"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {workspace = true}
execution-data = { path = "../execution-data" }
executor = { path = "../executor" }
bevy_rapier3d = { version = "*", features = [ "debug-render-3d" ] }
bevy = { version = "0.16.1", features = ["dynamic_linking", "bevy_picking"] }
bevy_editor_cam = "0.6.0"
